--- a/about.html
+++ b/about.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is about page - Jamil</h1>
     <p>from original branch</p>
+    <p>to merge local changes</p>
 </body>
 </html>
